--- a/external.html
+++ b/external.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>external css</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="/latihan1/css/style.css"> -->
+    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="/latihan1/style.css">
 </head>
 <body>
     
