memindahkan file external.html

--- a/latihan1/external.html
+++ b/latihan1/external.html
@@ -6,7 +6,7 @@
     <title>external css</title>
     <!-- <link rel="stylesheet" href="/latihan1/css/style.css"> -->
     <!-- <link rel="stylesheet" href="style.css"> -->
-    <link rel="stylesheet" href="/latihan1/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
