--- a/latihan2/halaman1.html
+++ b/latihan2/halaman1.html
@@ -10,5 +10,7 @@
     <h1>Hello World</h1>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit voluptatem atque, adipisci minima officia provident, obcaecati necessitatibus autem cupiditate facere, vitae ut? Dolorem dicta veritatis, consequuntur aliquid id sit consequatur?</p>
+
+    <a href="#">Ini adalah link</a>
 </body>
 </html>
