menambahkan banyak command

--- a/latihan2/halaman2.html
+++ b/latihan2/halaman2.html
@@ -10,5 +10,9 @@
     
     <h1>Hello World</h1>
 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, amet obcaecati necessitatibus adipisci repudiandae corrupti molestiae commodi magnam, quasi illo blanditiis in error iste alias rerum consequuntur, ipsum reprehenderit quam!</p>
+
+    <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
+
 </body>
 </html>
