menambahkan file css dan menggabungkannya ke file html

--- a/latihan3/halaman3.html
+++ b/latihan3/halaman3.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>halaman3.html</title>
+    <link rel="stylesheet" href="halaman3.css">
 </head>
 <body>
     <h1>Hello World</h1>
