menambahkan id dan class di file html dan menambahkan selector baru di file css

--- a/latihan3/halaman3.html
+++ b/latihan3/halaman3.html
@@ -29,9 +29,9 @@
 
     <h2>Judul Artikel</h2>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio corporis consequatur perspiciatis, iusto impedit laboriosam. Nostrum, similique eius. At, quidem ab natus maiores enim ipsam necessitatibus alias maxime architecto beatae!</p>
+    <p id="p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio corporis consequatur perspiciatis, iusto impedit laboriosam. Nostrum, similique eius. At, quidem ab natus maiores enim ipsam necessitatibus alias maxime architecto beatae!</p>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt ipsam iste possimus laborum eveniet sit tempora voluptatibus ad odio tenetur distinctio iure est omnis tempore laudantium, numquam, corporis, ex pariatur?</p>
+    <p class="p2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt ipsam iste possimus laborum eveniet sit tempora voluptatibus ad odio tenetur distinctio iure est omnis tempore laudantium, numquam, corporis, ex pariatur?</p>
 </body>
 </html>
 
