menambahkan nama class di file html dan menambahkan selector di file css

--- a/latihan3/halaman3.html
+++ b/latihan3/halaman3.html
@@ -25,13 +25,13 @@
         <li><a href="#">link 10</a></li>
     </ol>
 
-    <a href="#">Eyzarrakazudy</a>
+    <a href="#" class="cetak-tebal">Eyzarrakazudy</a>
 
     <h2>Judul Artikel</h2>
 
     <p id="p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio corporis consequatur perspiciatis, iusto impedit laboriosam. Nostrum, similique eius. At, quidem ab natus maiores enim ipsam necessitatibus alias maxime architecto beatae!</p>
 
-    <p class="p2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt ipsam iste possimus laborum eveniet sit tempora voluptatibus ad odio tenetur distinctio iure est omnis tempore laudantium, numquam, corporis, ex pariatur?</p>
+    <p class="p2 cetak-tebal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt ipsam iste possimus laborum eveniet sit tempora voluptatibus ad odio tenetur distinctio iure est omnis tempore laudantium, numquam, corporis, ex pariatur?</p>
 </body>
 </html>
 
