--- a/latihan4/halaman4.html
+++ b/latihan4/halaman4.html
@@ -10,16 +10,16 @@
     <a href="#" class="hello">Hello World</a>
     
     <ul>
-        <li><a href="#"></a>link 1</li>
-        <li><a href="#"></a>link 2</li>
-        <li><a href="#"></a>link 3</li>
-        <li><a href="#"></a>link 4</li>
-        <li><a href="#"></a>link 5</li>  
-        <li><a href="#"></a>link 6</li>
-        <li><a href="#"></a>link 7</li>
-        <li><a href="#"></a>link 8</li>
-        <li><a href="#"></a>link 9</li>
-        <li><a href="#"></a>link 10</li>
+        <li><a href="#">link 1</a></li>
+        <li><a href="#">link 2</a></li>
+        <li><a href="#">link 3</a></li>
+        <li><a href="#">link 4</a></li>
+        <li><a href="#">link 5</a></li>  
+        <li><a href="#">link 6</a></li>
+        <li><a href="#">link 7</a></li>
+        <li><a href="#">link 8</a></li>
+        <li><a href="#">link 9</a></li>
+        <li><a href="#">link 10</a></li>
     </ul>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam iste assumenda inventore beatae mollitia? Itaque temporibus assumenda minus veritatis eum dolore reprehenderit illo ducimus necessitatibus corporis, ex aliquam libero veniam!</p>
